<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/labView"
        android:layout_width="150dp"
        android:layout_height="112dp"
        android:layout_marginStart="149dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="149dp"
        android:gravity="center_horizontal"
        android:text="Варіант 13"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/facultyView"
        android:layout_width="164dp"
        android:layout_height="38dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="14dp"
        android:gravity="center_horizontal"
        android:text="@string/faculty_ua"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/facultyGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/courseView"
        app:layout_constraintTop_toBottomOf="@+id/labView" />

    <RadioGroup
        android:id="@+id/facultyGroup"
        android:layout_width="162dp"
        android:layout_height="281dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/courseGroup"
        app:layout_constraintTop_toBottomOf="@+id/facultyView">

        <RadioButton
            android:id="@+id/fict"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/fict_ua"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/ipsa"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:text="@string/ipsa_ua"
            android:textSize="20sp" />


        <RadioButton
            android:id="@+id/tef"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:text="@string/tef_ua"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/fmm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:text="@string/fmm_ua"
            android:textSize="20sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/courseView"

        android:layout_width="139dp"
        android:layout_height="41dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="11dp"
        android:gravity="center_horizontal"
        android:text="@string/course_ua"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/courseGroup"
        app:layout_constraintEnd_toStartOf="@+id/facultyView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labView" />

    <RadioGroup
        android:id="@+id/courseGroup"
        android:layout_width="141dp"
        android:layout_height="281dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/okButton"
        app:layout_constraintEnd_toStartOf="@+id/facultyGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseView">

        <RadioButton
            android:id="@+id/course1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/_1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/course2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:text="@string/_2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/course3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/_3"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/course4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:text="@string/_4"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="40dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseGroup" />


    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/okButton"
        app:layout_constraintTop_toBottomOf="@+id/facultyGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>
